--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+certifi==2020.4.5.1
+chardet==3.0.4
 cycler==0.10.0
+idna==2.9
+joblib==0.14.1
 kiwisolver==1.2.0
 matplotlib==3.2.1
 numpy==1.18.3
 pandas==1.0.3
+plaid-python==3.9.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2019.3
+requests==2.23.0
+scikit-learn==0.22.2.post1
 scipy==1.4.1
 seaborn==0.10.0
 six==1.14.0
 SQLAlchemy==1.3.16
-plaid-python==3.9.0 
+urllib3==1.25.9
